--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ members = [
 [dependencies]
 hex = "0.4.3"
 log = "0.4.16"
+serde = { version = "1.0", optional = true, features = ["derive"] }
 codec = { package = 'parity-scale-codec', version = "2.0.0", default-features = false,  features = ['derive']}
 keyring = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate.git", rev = '7c6342047c992b6f3fa917d0d0448eb7e89afa6c', package = "sp-keyring" }
-#frame-metadata = { version = "14.0.0", git = "https://github.com/paritytech/frame-metadata.git", tag = "v14.0.0", features = ["v14"] }
 
 [dependencies.sp-core]
 default-features = false
@@ -42,9 +42,9 @@ version = '1.0'
 
 [dependencies.substrate-api-client] 
 version = "0.6.0"
-path = "../substrate-api-client"
-# git = "https://github.com/irediaes/substrate-api-client.git"
-# rev = "b1bf3fd70a7443518edc4fd13395935fa7272047"
+# path = "../substrate-api-client"
+git = "https://github.com/irediaes/substrate-api-client.git"
+rev = "9c6d1ff271fa906ea2a98543f9b25ad9012c35cb"
 
 
 
@@ -53,5 +53,6 @@ default = ["std"]
 std = [
      'sp-runtime/std',
      'sp-core/std',
+	"serde/std",
      'substrate-api-client/std',
 ]
